--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "homepage": "https://mhmdel-sayed.github.io/team_task"
+
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
@@ -31,4 +33,6 @@
     "globals": "^15.15.0",
     "vite": "^6.2.0"
   }
+  
 }
+
